# diesel_crudable

./: .gitignore  Cargo.toml  README.md  flake.nix
diesel_crudable_derive/: Cargo.toml
diesel_crudable_derive/src/: lib.rs  marker.rs  model.rs  utils.rs
src/: lib.rs
