[package]
name = "diesel_crudable_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = [ "extra-traits" ] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3.5.0"
darling = "0.23.0"
